--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,834 @@
-h1 {
-    color: brown;
-    border: 4px solid blueviolet;
+@font-face {
+  font-family: "OpenSans-font";
+  src: url(../fonts/OpenSans-Regular.woff) format("woff");
+  font-weight: 400;
+  font-style: normal;
 }
+
+@font-face {
+  font-family: "OpenSans-font";
+  src: url(../fonts/OpenSans-Bold.woff) format("woff");
+  font-weight: 700;
+  font-style: normal;
+}
+
+*:focus {
+  outline: 1px dotted #050505;
+  outline-offset: 2px;
+}
+
+ul,
+ol {
+  list-style-type: none;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+* a {
+  text-decoration: none;
+  color: #000000;
+}
+
+body {
+  font-family: "OpenSans-font";
+
+}
+
+
+.header {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  background: #666666 url(../img/banner-mobile.jpg);
+  background-position: 0 0;
+  background-size: cover;
+  z-index: 1;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+@media (min-width: 768px) and (max-width: 1199px) {
+  .header {
+    background: #666666 url(../img/banner-bg-tablet.jpg);
+    height: 60vmax;
+    justify-content: flex-start;
+    padding-top: 3rem;
+  }
+}
+
+@media (min-width: 1200px) and (orientation: landscape), (min-height: 1200px) {
+  .header {
+    background: #666666 url(../img/banner-bg.jpg);
+    height: 38vmax;
+    padding-top: 3rem;
+    justify-content:flex-start;
+  }
+}
+
+.header::before {
+  content: "";
+  position: absolute;
+  min-width: 100%;
+  min-height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #000000;
+  opacity: 0.6;
+  z-index: -1;
+}
+
+.header__navigation {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  width: 72.2%;
+  z-index: 10;
+}
+
+@media (min-width: 768px) and (max-width: 1199px) {
+  .header__navigation {
+    width: 91%;
+    margin-left: 4.5%;
+    margin-right: 4.5%;
+  }
+}
+
+@media (min-width: 1200px) {
+}
+
+.header__logo {
+
+  margin-right: 12.5%;
+  width: 75vw;
+  min-width: 75vw;
+  max-width: 75vw;
+}
+
+@media (min-width: 768px) and (max-width: 1199px) {
+  .header__logo {
+    min-width: 10rem;
+    max-width: 10rem;
+
+  }
+}
+
+@media (min-width: 1200px) {
+  .header__logo{
+    min-width: 11.25rem;
+    max-width: 11.25rem;
+  }
+
+  .menu__button {
+    display: none;
+  }
+}
+
+.navbar {
+  display: flex;
+  align-items: flex-end;
+  max-width: 100%;
+}
+
+@media (max-width: 1199px), (orientation: landscape) {
+  .navbar {
+    display: none;
+  }
+
+  .menu__button {
+    display: flex; 
+    align-items: center;  
+    cursor: pointer;
+    width: 3rem;
+    margin-top: 2rem;
+    z-index: 4;
+    
+    position: absolute;
+    right: 5%;
+    top: 5%;
+  }
+  
+  .menu__button > span,
+  .menu__button > span::before,
+  .menu__button > span::after {
+    display: block;
+    position: relative;
+    width: 100%;
+    height: 5px;
+    background-color: #ffffff;
+  }
+  .menu__button > span::before {
+    content: '';
+    top: -13px;
+  }
+  .menu__button > span::after {
+    content: '';
+    top: 8px;
+  }
+}
+
+.navbar__item {
+  margin-right: 35px;
+  font-size: 0.8125rem;
+  text-transform: uppercase;
+  z-index: 5;
+}
+
+.navbar__item_link {
+  color: #ffffff;
+}
+
+.navbar__item:hover {
+  text-decoration: underline;
+}
+
+.navbar__item:nth-last-child(1) {
+  margin: 0;
+}
+
+.headline {
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.header__headline {
+  position: relative;
+  color: #ffffff;
+  width: 100%;
+  margin-top: 6rem;
+
+}
+
+.header__headline_text {
+  font-size: 1.625rem;
+  line-height: 1.385;
+  margin: 0 1rem;
+}
+
+@media (min-width: 768px) and (max-width: 1199px) {
+  .header__headline_text {
+    font-size: 2.5rem;
+    line-height: 1.375;
+    margin-top: 100px;
+    margin-left: 2.2rem;
+    margin-right: 2.2rem;
+  }
+}
+
+@media (min-width: 1200px){
+  .header__headline_text {
+    font-size: 2.875rem;
+    line-height: 1.2;
+    margin-left: 2.2rem;
+    margin-right: 2.2rem;
+  }
+}
+
+.trends {
+  margin-top: 60px;
+  position: relative;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.section__headline {
+  position: relative;
+  font-size: 0.875rem;
+  line-height: 1.3;
+  font-weight: bold;
+  text-align: center;
+  text-transform: uppercase;
+  margin-bottom: 27px;
+}
+
+.section__headline:after {
+  content: "";
+  background: #e1d9bd;
+  display: flex;
+  justify-content: center;
+  width: 66px;
+  height: 3px;
+  margin: 10px auto 0;
+}
+
+.trends__block {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-bottom: 3rem;
+}
+
+.trends__item {
+  position: relative;
+  padding: 20px;
+  z-index: 0;
+  margin-bottom: 2px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+
+@media (orientation: landscape) {
+  .trends__block {
+    flex-direction: row;
+    justify-content: flex-start;
+    }
+}
+@media (max-width: 767px) and (orientation: landscape) {
+  .header__logo {
+    margin-top: 5rem;
+  }
+
+  .header__headline {
+    margin-top: 2rem;
+  }
+
+  .trends__item {
+  width: calc(50% - 1px);
+  }
+
+  .trends__item:nth-child(even) {
+    margin-left: 1px;
+    align-self: flex-end;
+  }
+  
+  .trends__item:nth-child(odd) {
+    margin-right: 1px;
+  }
+}
+
+@media (min-width: 768px) and (orientation: portrait){
+  .trends__item {
+    width: calc(50% - 1px);
+    }
+  
+    .trends__item:nth-child(even) {
+      margin-left: 1px;
+      align-self: flex-end;
+    }
+    
+    .trends__item:nth-child(odd) {
+      margin-right: 1px;
+    }
+}
+
+@media (min-width: 768px) and (orientation: landscape) {
+  .header__headline {
+    margin-top: 8rem;
+  }
+
+  .trends__block {
+    flex-direction: row;
+    justify-content: space-between;
+    }
+    
+    .trends__item {
+    width: calc(25% - 1px);
+    }
+}
+
+
+
+.trends__darken:after {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #000000;
+  opacity: 0.6;
+  z-index: -1;
+}
+
+.trends__item_1 {
+  background: #eff6f1 url(../img/trend1.jpg);
+}
+
+.trends__item_2{
+  background: #eff6f1 url(../img/trend2.jpg);
+}
+
+.trends__item_3{
+  background: #eff6f1 url(../img/trend3.jpg);
+}
+
+.trends__item_4{
+  background: #eff6f1 url(../img/trend4.jpg);
+}
+
+.trends__content {
+  padding: 2rem;
+  border:4px solid #877242;
+}
+
+.trends__item {
+  background-size: cover;
+}
+
+.tags {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: left;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.tags>li {
+  margin-right: 20px;
+}
+
+.article__tag, .trends__tag {
+  font-weight: bold;
+  text-transform: uppercase;
+  color: #b59f5b;
+  font-size: 0.875rem;
+}
+
+.article__tag:hover, .trends__tag:hover {
+  text-decoration: underline;
+}
+
+.article__headline, .trend__headline {
+  font-size: 1rem;
+  line-height: 1.2;
+  margin: 5px 0 26px 0;
+}
+
+.trend__headline {
+  margin: 13px 0 0 0 ;
+}
+
+.trend__headline_link {
+  color: #ffffff;
+}
+
+.article__headline_link:hover, .trend__headline_link:hover {
+  color: #b59f5b;
+}
+
+.page {
+  display: flex;
+  flex-direction: column;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  width: 100%;
+}
+
+
+
+.main {
+  width: 100%;
+  margin-right: 60px;
+}
+
+
+
+.article {
+  display: flex;
+  flex-direction: column;
+}
+
+.main__article {
+  padding-bottom: 25px;
+  margin: 30px 0;
+  border-bottom: 3px solid #eeeeee;
+}
+
+.article__image {
+  width: 100%;
+  background: #eff6f1;
+}
+
+.article__content {
+  width: 100%;
+}
+
+.info {
+  display: flex;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.info__date {
+  color: #888888;
+  margin-right: 10px;
+  white-space: nowrap;
+  font-size: 0.75rem;
+}
+
+.info__author {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 0.75rem;
+}
+
+.article__text {
+  width: 100%;
+  font-size: 0.875rem;
+  line-height: 1.5;
+}
+
+
+.aside {
+  width: 100%;
+}
+
+@media (min-width: 768px) {
+  .page {
+    flex-direction: row;
+    padding-left: 2.2rem;
+    padding-right: 2.2rem;
+    width: 100%;
+  }
+
+  .main {
+    width: 100%;
+    margin-right: 1.125rem;
+  }
+
+  .aside {
+    width: 80%;
+    margin-left: 1.125rem;
+  }
+}
+
+.section {
+  margin: 60px 0 60px;
+}
+
+.aside>.section:first-child {
+  margin-top: 0;
+}
+.aside>.section:last-child {
+  margin-bottom: 0;
+}
+
+
+
+.aside__article {
+  margin-top: 20px;
+  flex-direction: row;
+}
+
+.thumbnail {
+  min-width: 70px;
+  max-width: 70px;
+  background: #f4f7f6;
+  font-size: 10px;
+}
+
+.article__content_small {
+  display: flex;
+  flex-direction: column;
+  margin-left: 20px;
+}
+
+.aside__info {
+  margin-top: -3px;
+}
+
+.article__headline_small {
+  font-size: 14px;
+  margin: 0;
+}
+
+.search__form {
+  position: relative;
+
+  width: 100%;
+}
+
+.visually-hidden {
+  width: 1px;
+  height: 1px;
+  clip: rect(1px, 1px, 1px, 1px);
+  position: absolute;
+}
+
+.input {
+  height: 48px;
+  padding: 0 18px;
+  background-color: #f4f7f6;
+  border: none;
+  font-size: 13px;
+  font-family: inherit;
+}
+
+.search__input {
+  width: 100%;
+  padding-right: 65px;
+}
+
+.search__input:focus,
+.email__input:focus {
+  outline: 1px solid #b59f5b;
+  outline-offset: -1px;
+}
+
+.search__btn {
+  position: absolute;
+  width: 48px;
+  height: 48px;
+  right: 0;
+  background-color: #b59f5b;
+  border: none;
+}
+
+.search__btn:hover,
+.email__submit:hover,
+.shop-button:hover {
+  background-color: #323232;
+  cursor: pointer;
+}
+
+.search__btn_icon {
+  content: url(../svg/search.svg);
+  border: none;
+  width: 20px;
+  height: 20px;
+}
+
+.email__input {
+  width: 100%;
+  font-size: 13px;
+}
+
+.email__submit,
+.shop-button {
+  font-weight: bold;
+  font-size: 14px;
+  margin-top: 15px;
+  width: 100%;
+  background: #b59f5b;
+  border: none;
+  height: 47px;
+  color: #ffffff;
+  text-transform: uppercase;
+}
+
+.tags_aside {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: left;
+  margin-top: -5px;
+}
+
+.tags__block {
+  margin: 0 6px 5px 0;
+}
+
+.tags__item {
+  background: #ffffff;
+  font-size: 12px;
+  font-weight: bold;
+  text-transform: uppercase;
+
+  height: 30px;
+  padding: 3px 15px;
+  border: 3px solid #eeeeee
+}
+
+.tags__item:hover {
+  border-color: #b59f5b;
+}
+
+.categories {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: -20px;
+}
+
+.categories__item {
+  padding: 10px 0 10px;
+  font-size: 14px;
+  font-weight: bold;
+  border-bottom: 1px solid #eeeeee;
+}
+
+.categories__link:hover {
+  color: #c5b585;
+}
+
+.categories__count {
+  color: #b59f5b;
+  font-weight: bold;
+  vertical-align: super;
+}
+
+.products__section {
+    display: flex;
+    flex-direction: column;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    margin-bottom: 0;
+}
+
+.products {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 0 15px;
+  width: 100%;
+}
+
+.products__item {
+
+  position: relative;
+  width: 100%;
+  margin-right: 4%;
+}
+
+.products__item:nth-last-child(1) {
+  margin-right: 0;
+}
+
+.products__image {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  overflow: hidden;
+}
+
+.products__headline {
+  font-size: 1.25rem;
+  line-height: 1.2;
+}
+
+.products__border {
+  position: relative;
+  border: 3px solid rgba(181, 159, 91, 0.6);
+  height: 260px;
+  padding: 22px;
+  padding-top: 42px;
+ 
+  top: -35px;
+}
+
+.products__text>p {
+  font-size: 0.937rem;
+  line-height: 1.5;
+}
+
+.products__text {
+  margin-bottom: 1.75rem;
+}
+
+.purchase-info {
+  display: flex;
+  justify-content: space-between;
+}
+
+.price-info{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 45%;
+}
+
+.price-ul {
+  font-size: 0.875rem;
+  line-height: 1.7;
+  text-decoration: line-through;
+  font-weight: bold;
+}
+
+.price {
+  font-size: 1.25rem;
+  line-height: 1.2;
+  font-weight: bold;
+}
+
+.shop-button {
+  width: 140px;
+  height: 3rem;
+  margin: 0;
+
+}
+
+address {
+  display: flex;
+  justify-content: center;
+  margin: 12px auto 70px;
+  padding: 0 15px;
+  width: 100%;
+
+}
+
+.text__link {
+  color: #877242;
+}
+
+.text__link:hover {
+  text-decoration: underline;
+}
+
+.social {
+  display: flex;
+  justify-content: center;
+  background-color: #f4f7f6;
+  width: 100%;
+  padding: 30px 0;
+}
+
+.social__link {
+  display: block;
+  margin-left: 25px;
+  width: 20px;
+  height: 20px;
+  background-size: contain;
+}
+
+.social>li:first-child>a {
+  margin: 0;
+}
+
+.social__twitter {
+  background-image: url(../svg/004-twitter.svg);
+}
+
+.social__pinterest {
+  background-image: url(../svg/001-pinterest.svg);
+}
+
+.social__facebook {
+  background-image: url(../svg/002-facebook-logo.svg);
+}
+
+.social__instagram {
+  background-image: url(../svg/005-instagram.svg);
+}
+
+.social__tumblr {
+  background-image: url(../svg/003-tumblr.svg);
+}
+
+.social__span {
+  display: none;
+}
+
+.footer__copyright {
+  text-align: center;
+  margin-bottom: 40px;
+  font-size: 12px;
+}
+
+.footer__copyright>a {
+  color: #999999;
+  font-weight: bold;
+}
+
+/*------------------------------------------------------- */
