--- a/css/style.css
+++ b/css/style.css
@@ -158,8 +158,6 @@ body {
     appearance: none;
   }
 
-  
-  
   /* POPUP END */
   
 .header {
@@ -412,6 +410,10 @@ body {
   padding-bottom: 25px;
   margin: 30px 0;
   border-bottom: 3px solid #eeeeee;
+}
+
+.main__article:first-child {
+  margin-top: 0;
 }
 
 .article__image {
@@ -843,8 +845,10 @@ address {
   }
 
   .aside {
-    min-width: 25%;
-    max-width: 25%;
+    min-width: 272px;
+    max-width: 272px;
+    /* min-width: 25%;
+    max-width: 25%; */
     margin-left: 1.125rem;
   }
 }
